--- a/templates/components/profile_card.html
+++ b/templates/components/profile_card.html
@@ -1,6 +1,6 @@
 <a href="{{url_for('user_details', username=profile.username)}}">
         <div class="card">
-            <img src="{{profile.imgUrl}}" class="card-img-top" alt="...">
+            <img src="{{profile.imgURL}}" class="card-img-top" alt="...">
             <div class="card-body">
                 <h5 class="card-title">{{profile.username}}</h5>
                 <p class="card-text">{{profile.shortDescription}}</p>
