--- a/static/scss/_search.scss
+++ b/static/scss/_search.scss
@@ -9,11 +9,17 @@
 }
 
 #sidebar {
+    background: $brightmidblue;
+    color: #fff;
+
+    padding-top: 2rem;
+    transition: all 1s ease;
+
     width: 80vw;
     min-height: 100vh;
 
     @media (min-width: $bp-mobile) {
-        width: 100%;
+        width: 60vw;
     }
 
     @media (min-width: $bp-desktop) {
@@ -40,26 +46,16 @@
     transition: all 1s ease;
 
     @media (min-width: $bp-mobile) {
-        width: -60vw;
+        margin-left: -60vw;
     }
 
     @media (min-width: $bp-desktop) {
-        width: -35vw;
+        margin-left: -35vw;
     }
 }
 
 a[data-toggle="collapse"] {
     position: relative;
-    transition: all 1s ease;
-}
-
-
-
-#sidebar {
-    background: $brightmidblue;
-    color: #fff;
-
-    padding-top: 2rem;
     transition: all 1s ease;
 }
 
@@ -172,11 +168,35 @@ ul ul a {
 }
 
 #content {
-    width: 50vw;
+    width: 80%;
     height: 100vh;
 }
 
 .search-row {
     height: 50vh;
     width: 50vw;
+}
+
+.search-overlay {
+
+    @media (max-width: $bp-mobile) {
+        display: none;
+        position: fixed;
+        /* full screen */
+        width: 100vw;
+        height: 100vh;
+        /* transparent black */
+        background: rgba(0, 0, 0, 0.7);
+        /* middle layer, i.e. appears below the sidebar */
+        z-index: 998;
+        opacity: 0;
+        /* animate the transition */
+        transition: all 0.5s ease-in-out;
+    }
+}
+
+/* display .overlay when it has the .active class */
+.search-overlay.active {
+    display: block;
+    opacity: 1;
 }
