--- a/templates/pages/search.html
+++ b/templates/pages/search.html
@@ -45,7 +45,7 @@
                 <div class="col-6">
 
                     <div class="form-check">
-                        <input class="form-check-input" type="checkbox" name="skills" value="{{skill}}" id="skill-box">
+                        <input class="form-check-input" type="checkbox" name="skill" value="{{skill}}" id="skill-box">
                         <label class="form-check-label" for="skill-box">
                             {{skill}}
                         </label>
@@ -122,7 +122,7 @@
                     <div class="col-12 col-md-3 filtercol">
 
                         <div class="form-check abc-checkbox ">
-                            <input class="form-check-input" name="text" id="text" type="checkbox">
+                            <input class="form-check-input" name="commstyle" id="text" type="checkbox">
                             <label class="form-check-label" for="text">
                                 Text
                             </label>
@@ -134,7 +134,7 @@
                 <div class="row">
                     <div class="col-12 col-md-3 filtercol">
                         <div class="form-check abc-checkbox ">
-                            <input class="form-check-input" name="video" id="video" type="checkbox">
+                            <input class="form-check-input" name="commstyle" id="video" type="checkbox">
                             <label class="form-check-label" for="video">
                                 Video
                             </label>
@@ -145,7 +145,7 @@
                 <div class="row">
                     <div class="col-12 col-md-3 filtercol">
                         <div class="form-check abc-checkbox">
-                            <input class="form-check-input" name="inperson" id="inperson" type="checkbox">
+                            <input class="form-check-input" name="commstyle" id="inperson" type="checkbox">
                             <label class="form-check-label" for="inperson">
                                 In person
                             </label>
@@ -178,7 +178,7 @@
                     <div class="col-12 filtercol">
 
                         <div class="form-check abc-checkbox ">
-                            <input class="form-check-input" name="lookingForCoFounder" id="lookingForCoFounder"
+                            <input class="form-check-input" name="other" id="lookingForCoFounder"
                                 type="checkbox">
                             <label class="form-check-label" for="lookingForCoFounder">
                                 Looking for Co-Founder
@@ -187,7 +187,7 @@
 
 
                         <div class="form-check abc-checkbox ">
-                            <input class="form-check-input" name="availableForHir" id="availableForHir" type="checkbox">
+                            <input class="form-check-input" name="other" id="availableForHir" type="checkbox">
                             <label class="form-check-label" for="availableForHir">
                                 Available for Hire
                             </label>
@@ -195,7 +195,7 @@
 
 
                         <div class="form-check abc-checkbox ">
-                            <input class="form-check-input" name="availableForProjects" id="availableForProjects"
+                            <input class="form-check-input" name="other" id="availableForProjects"
                                 type="checkbox">
                             <label class="form-check-label" for="availableForProjects">
                                 Available for Projects
