--- a/templates/pages/search.html
+++ b/templates/pages/search.html
@@ -30,7 +30,7 @@
                 <div class="col-6">
 
                     <div class="form-check">
-                        <input class="form-check-input" type="checkbox" name="skills" value="{{skill}}" id="skill-box">
+                        <input class="form-check-input" type="checkbox" name="skill" value="{{skill}}" id="skill-box">
                         <label class="form-check-label" for="skill-box">
                             {{skill}}
                         </label>
