Fix missing for loop in search.html.

--- a/templates/pages/search.html
+++ b/templates/pages/search.html
@@ -54,6 +54,7 @@
 
                 </div>
                 {% endif %}
+                {% endfor %}
 
             <!-- The following select classes rely on the bootstrap-select library: https://developer.snapappointments.com/bootstrap-select/ -->
 
