Get skill and district args to work in tandem.

--- a/templates/pages/search.html
+++ b/templates/pages/search.html
@@ -80,7 +80,7 @@
 
 
 
-                    <select class="selectpicker districtSelect" id="districtSelect" multiple
+                    <select class="selectpicker districtSelect" id="districtSelect" name="district" multiple
                         data-selected-text-format="count">
                         <option value="Mitte">Mitte</option>
                         <option value="Friedrichshain-Kreuzberg">Friedrichshain-Kreuzberg</option>
